<resources>
<<<<<<< HEAD
    <string name="app_name">GhosAPI View</string>
    <string name="url">URL</string>
    <string name="key">KEY</string>
    <string name="save">Save</string>
    <string name="postlist">Posts</string>
    <string name="pagelist">pagelist</string>
    <string name="settings">Settings</string>
=======
    <string name="app_name">GhostAPI</string>
    <string name="post_ago_1">a minute ago</string>
    <string name="post_ago_2">%1$d minutes ago</string>
    <string name="post_ago_3">an hour ago</string>
    <string name="post_ago_4">%1$d hours ago</string>
    <string name="post_ago_5">a day ago</string>
    <string name="post_ago_6">%1$d days ago</string>
    <string name="post_time">%1$d min read</string>
>>>>>>> upd
</resources>
