<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:singleLine="true"
                style="@style/Widget.AppCompat.Button.Colored"
                />

            <Button
                android:id="@+id/btnPostList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/postlist"
                android:singleLine="true"
                style="@style/Widget.AppCompat.Button"
                />

            <Button
                android:id="@+id/btnPageList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/pagelist"
                style="@style/Widget.AppCompat.Button"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/url"
                tools:layout_editor_absoluteX="36dp"
                tools:layout_editor_absoluteY="135dp" />

            <EditText
                android:id="@+id/editUrl"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textUri"
                android:text=""
                app:layout_constraintStart_toStartOf="@+id/editUrl"
                tools:ignore="TextFields"
                tools:layout_editor_absoluteY="167dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textKey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/key"
                tools:layout_editor_absoluteX="36dp"
                tools:layout_editor_absoluteY="183dp" />

            <EditText
                android:id="@+id/editKey"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="text"
                android:text=""
                tools:layout_editor_absoluteX="70dp"
                tools:layout_editor_absoluteY="123dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSave"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:layout_gravity="right"
            android:text="@string/save" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>